# sumi-emu-sudachi

./: .gitmodules  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  README.md  android_build_clear.bat  android_build_release.bat  android_build_start.bat  might  open_debug_build.bat  setup-hard.bat  setup-soft.bat  setup.bat  setup.sh  skip_cmake_limits.bat  vcpkg.json
.github/workflows/: android-build.yml  android_release.yml  build-deploy-android.yml  windows_release.yml
CMakeModules/: CopysumiFFmpegDeps.cmake  CopysumiQt5Deps.cmake  CopysumiSDLDeps.cmake  DownloadExternals.cmake  FindLLVM.cmake  GenerateSCMRev.cmake  MinGWClangCross.cmake
hooks/: pre-commit
src/: CMakeLists.txt
src/android/: .gitignore  build.gradle.kts  gradle.properties
src/audio_core/: CMakeLists.txt
src/common/: CMakeLists.txt  announce_multiplayer_room.h  detached_tasks.h  nvidia_flags.cpp  settings.cpp  settings.h  settings_enums.h  settings_setting.h  threadsafe_queue.h  uuid.h
src/core/: CMakeLists.txt  constants.h  hardware_properties.h  perf_stats.cpp  reporter.cpp
src/dedicated_room/: CMakeLists.txt  sumi_room.cpp  sumi_room.rc
src/frontend_common/: config.cpp
src/input_common/: CMakeLists.txt  input_poller.cpp
src/network/: announce_multiplayer_session.cpp  room.cpp  room.h  verify_user.h
src/sudachi/: CMakeLists.txt  aboutdialog.ui  bootmanager.cpp  compatdb.cpp  main.cpp  main.h  main.ui
src/sudachi_android/: settings.gradle.kts
src/sudachi_cmd/: CMakeLists.txt  config.cpp  default_ini.h  sdl_config.cpp  sudachi.aps  sudachi.cpp
src/sumi/: CMakeLists.txt  main.h  (+30 more)
(+706 files in other folders)
